Bug 7122 - lib/X11/src/util/makekeys: Floating point exception due to best_z == 0
Summary: lib/X11/src/util/makekeys: Floating point exception due to best_z == 0
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Build/Modular (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2006-06-05 08:45 UTC by vdb128
Modified: 2006-06-05 08:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch: #define KTNUM 4000 (1.03 KB, patch)
2006-06-05 08:48 UTC, vdb128
no flags Details | Splinter Review

Description vdb128 2006-06-05 08:45:22 UTC
The file keysymdef.h has grown a bit over the last two weeks.  As a
result, the generation of ks_tables.h through makekeys now
always encounters a Floating point exception.

It turned out that MIN_REHASH is not reached for any tried modulus 
z=ksnum..KTNUM-1, such that best_z is left untouched at zero.

This patch just increases the hard coded KTNUM and adds an error message.
Comment 1 vdb128 2006-06-05 08:48:04 UTC
Created attachment 5823 [details] [review]
patch: #define KTNUM 4000
Comment 2 Daniel Stone 2006-06-05 08:58:41 UTC
the libX11 CVS archive is dead: build out of git instead


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.