fix floating point exception in makekeys.c

see https://bugs.freedesktop.org/show_bug.cgi?id=7122